@@ -4,6 +4,8 @@ changes relative to sbcl-1.4.1:
   * enhancement: ASDF updated to 3.3.0.1. This ASDF release is dedicated to
     the late Elias Pipping who put enormous amounts of work into it despite
     his terminal illness. Thank you and rest in peace. (lp#1681201)
+  * enhancement: alien routines compiled with '-fsanitize=thread' and/or
+    '-fsanitize=memory' cause fewer false positives in error reporting.
 
 changes in sbcl-1.4.1 relative to sbcl-1.4.0:
   * optimization: faster foreign callbacks.
